--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-boost": "^0.3.1",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-link": "^1.2.11",
+    "apollo-link-http": "^1.5.14",
     "apollo-link-state": "^0.4.2",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
