--- a/package.json
+++ b/package.json
@@ -5,20 +5,27 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.4",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.4",
     "apollo-boost": "^0.3.1",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-link": "^1.2.11",
     "apollo-link-http": "^1.5.14",
     "apollo-link-state": "^0.4.2",
+    "axios": "^0.18.0",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.6",
     "react-apollo": "^2.5.3",
     "react-apollo-hooks": "^0.4.4",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "react-spring": "^8.0.19",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "typescript": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
